[package]
name = "markdown-rs-ios-binds"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "markdownrsiosbinds"
crate-type = ["staticlib", "cdylib"]

[dependencies]
markdown = "1.0.0-alpha.14"
